# backend/openapi_server/controllers/orders_controller.py
@@ -6,6 +6,7 @@ from typing import Union
 from openapi_server.models.orders_add import OrdersAdd  # noqa: E501
 from openapi_server import util
 from openapi_server.models.orders_response import OrdersResponse
+from openapi_server.models.orders_change import OrdersChange
 
 from openapi_server.__init__ import get_db, close_db
 
@@ -76,7 +77,62 @@ def orders_post(orders_add=None):  # noqa: E501
     return "invalid request", 400 
 
 
-def orders_put(orders_add=None):  # noqa: E501
+def orders_put(id, orders_change=None):  # noqa: E501
+    db = get_db()
+    cursor = db.cursor()
+    
+    cursor.execute("SELECT * FROM orders WHERE id = %s", (id,))
+    result = cursor.fetchone()
+    if result is None:
+        return "Order not found", 404
+    
     if connexion.request.is_json:
-        orders_add = OrdersAdd.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+        orders_change = OrdersChange.from_dict(connexion.request.get_json())  # noqa: E501
+        
+        if isinstance(orders_change, OrdersChange):
+            orders_change = orders_change.to_dict()
+            
+        update_fields = {}
+            
+        if orders_change.get("dateAdd") is not None:
+            update_fields['dateAdd'] = orders_change['dateAdd']
+            
+        if orders_change.get("state") is not None:
+            update_fields['state'] = orders_change['state']
+            
+        if orders_change.get("shipmentType") is not None:
+            update_fields['shipmentType'] = orders_change['shipmentType']
+            
+        if orders_change.get("comment") is not None:
+            update_fields['comment'] = orders_change['comment']
+            
+        if orders_change.get("products") is not None:
+            update_fields['products'] = json.dumps(orders_change['products'])
+            
+        if orders_change.get("customer") is not None:
+            update_fields['customer'] = orders_change['customer']
+        
+        if orders_change.get("dateClose") is not None:
+            update_fields['dateClose'] = orders_change['dateClose']
+            
+        if update_fields is None:
+            return "No fields to update", 400
+        
+        # Construct the SQL update statement dynamically
+        set_clause = ", ".join([f"{key} = %s" for key in update_fields.keys()])
+        values = list(update_fields.values())
+        values.append(id)
+
+        update_query = f"UPDATE orders SET {set_clause} WHERE id = %s"
+
+        try:
+            cursor.execute(update_query, tuple(values))
+            db.commit()
+        except Exception as e:
+            db.rollback()
+            return "Failed to update order", 500
+        finally:
+            close_db(db)
+            return "Order updated", 200
+        
+    return "invalid request", 400
